toggle visibility fixed

--- a/src/ChatList/ChatList.css
+++ b/src/ChatList/ChatList.css
@@ -2,7 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;600;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&family=Raleway&display=swap');
 
-.listOfChats {
+#listOfChats {
+    grid-area: 2 / 1 / 4 / 3; 
+    overflow-y: scroll; 
+    margin-top: 0;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+#listOfChats_visible {
     grid-area: 2 / 1 / 4 / 3; 
     overflow-y: scroll; 
     margin-top: 0;
@@ -12,7 +19,6 @@
 .chatListItem { 
     display: flex;
     justify-content: flex-start;
-    /* flex-flow: column wrap;  */
     margin: 2% 0; 
     height: auto;
     width: 100%;
@@ -77,11 +83,11 @@
 }
 
 @media only screen and (max-width: 767px) {
-    .listOfChats {
+    #listOfChats {
         grid-area: 2 / 1 / 3 / 4; 
         visibility: hidden;
     }
-    .listOfChats_visible {
+    #listOfChats_visible {
         grid-area: 2 / 1 / 3 / 5; 
         visibility: visible;
         z-index: 10;
