--- a/src/CurrentChat/CurrentChat.css
+++ b/src/CurrentChat/CurrentChat.css
@@ -14,10 +14,10 @@
 .message {   
     position: relative;
     max-width: 70%;
-    padding: 1.3%;
+    padding: 2%;
     margin-bottom: 2%;
     border-radius: 0.5em;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 .userMess {
     background-color: rgb(255, 255, 255);
