--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
     width: 100vw;
     font-size: 1rem;
     font-family: 'Lato', sans-serif, 'Open Sans', sans-serif, 'Raleway', sans-serif;
